@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+August 31, 2007
+* [GB] Fixed save capabilities in OPJViewer due to recent code upgrade
+
 August 30, 2007
 * [FOD] Changed the OpenJPEG library interface to enable users to access information regarding the codestream (also called codestream index).
 		This index is usefull for all applications requiring to have a scalable acces to the codestream (like JPIP applications, ...)
